chore: add plume report and update deploy script

--- a/src/components/data/projects.json
+++ b/src/components/data/projects.json
@@ -1,4 +1,10 @@
-[  
+[ 
+  {
+    "skills": ["Solidity"],
+    "title": "Plume Network",
+    "description": "Cultured Smart Contracts",
+    "source": "https://github.com/Zellic/publications/blob/master/Cultured%20-%20Zellic%20Audit%20Report.pdf"
+  }, 
   {
     "skills": ["Solidity"],
     "title": "Bulla Network",
