--- a/src/components/data/projects.json
+++ b/src/components/data/projects.json
@@ -1,6 +1,12 @@
 [ 
   {
     "skills": ["Solidity"],
+    "title": "Trillion Network",
+    "description": "Cross Chain Contracts",
+    "source": "https://github.com/Zellic/publications/blob/master/Cultured%20-%20Zellic%20Audit%20Report.pdf"
+  },
+  {
+    "skills": ["Solidity"],
     "title": "Plume Network",
     "description": "Cultured Smart Contracts",
     "source": "https://github.com/Zellic/publications/blob/master/Cultured%20-%20Zellic%20Audit%20Report.pdf"
